# Attention

./: CMakeLists.txt  Readme.md
src/: attention.hpp  math.hpp  ops.hpp  tensor.hpp  tensor_math.hpp  tensor_validate.hpp  validation.hpp
tests/: CMakeLists.txt  common.hpp
tests/correctness/: main.cpp  math_test.hpp  matrix_methods.hpp  ops_test.hpp  validation.hpp  validation_test.hpp
tests/performance/: bench.hpp  bench_attention.hpp  bench_multiply.hpp  main.cpp
